# sealoc

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
configs/: default.toml  test.toml
docs/: 01_getting_started.md  02_usage.md  03_data_model.md  04_api_reference.md
examples/: find_overlapping_footprints.py  find_proximate_poses.py  read_camera_geometries_from_repository.py  read_models_from_repository.py  test_image_store.py
notebooks/: search_camera_footprints.ipynb  search_camera_poses.ipynb  visualize_camera_geometries.ipynb
scripts/: populate_database.sh
src/sealoc/: __init__.py  environment.py
src/sealoc/cli/: entrypoint.py
src/sealoc/cli/tasks/: actions.py  commands.py
src/sealoc/common/: env.py
src/sealoc/dal/: __init__.py  dal.py
src/sealoc/dal/stores/: __init__.py  (+1 more)
src/sealoc/database/: __init__.py  common.py  types.py
src/sealoc/geometry/: __init__.py  footprint_index.py  footprint_metrics.py  pose_index.py  pose_metrics.py  types.py
src/sealoc/image/: __init__.py  image_io.py  image_types.py
src/sealoc/models/: __init__.py  camera_models.py
src/sealoc/orm/: __init__.py  camera_records.py  event_handlers.py
src/sealoc/transforms/: __init__.py  constants.py  transforms.py
tests/: test_dal.py  test_database.py  test_environment.py
tests/geometry/: test_footprint_index.py  test_footprint_metrics.py  test_pose_index.py  test_pose_metrics.py
tests/models/: test_camera.py  test_camera_bundle.py  test_camera_calibration.py  test_camera_group.py  test_camera_sensor.py
(+19 files in other folders)
