[project]
name = "sealoc"
version = "0.1.0"
description = "SEALOC - A dataset for benchmarking long-term visual localization in benthic environments."
readme = "README.md"
authors = [
    { name = "Martin Kvisvik Larsen", email = "martin.k.larsen@ntnu.no" }
]
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "click>=8.1.7",
    "geopandas>=1.1.3",
    "httpx>=0.28.1",
    "imageio>=2.37.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "msgspec>=0.19.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.2",
    "pyproj>=3.7.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.34",
    "tqdm>=4.67.1",
]

[project.scripts]
sealoc = "sealoc.cli.entrypoint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sealoc"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "ruff>=0.8.3",
]
